[gd_scene load_steps=14 format=2]

[ext_resource path="res://prefabs/entities/base-entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/player-aim-direction.png" type="Texture" id=3]
[ext_resource path="res://prefabs/entities/player/animations.tres" type="SpriteFrames" id=4]
[ext_resource path="res://scripts/state-machine/state-machine.gd" type="Script" id=5]
[ext_resource path="res://prefabs/entities/player/states/idle.gd" type="Script" id=6]
[ext_resource path="res://prefabs/entities/player/states/pickup.gd" type="Script" id=7]
[ext_resource path="res://prefabs/entities/player/states/walk.gd" type="Script" id=8]
[ext_resource path="res://prefabs/entities/player/states/run.gd" type="Script" id=9]
[ext_resource path="res://prefabs/entities/player/states/crouch-walk.gd" type="Script" id=10]
[ext_resource path="res://prefabs/entities/player/states/crouch.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 14 )

[node name="Player" index="0" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 2 )

[node name="CursorDirection" type="Sprite" parent="." index="0"]
position = Vector2( 0, 2.5 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 0, -14.5 )
frames = ExtResource( 4 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="WorldInteraction" type="Area2D" parent="." index="5"]
position = Vector2( 0, -15 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldInteraction" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]
position = Vector2( 0, -14.5 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="StateMachine" type="Node" parent="." index="7"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 6 )

[node name="Walk" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 8 )

[node name="Run" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 9 )

[node name="Crouch" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 11 )

[node name="Crouch-Walk" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 10 )

[node name="Pickup" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 7 )
